Added new recipe. Make the file name 'chili' lowercase to follow the naming convention.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <br>
         <h1>Odin-Recipe</h1>
         <ul>
-             <li><h2><a href="./recipes/Chili-Relleno-Casserole.html">Chili Relleno Casserole</a></h2></li>
+             <li><h2><a href="./recipes/chili-relleno-casserole.html">Chili Relleno Casserole</a></h2></li>
+             <li><h2><a href="./recipes/burger.html">Triple Seared Whiskey Burger</a></h2></li>
         </ul>
     </body>
 </html>
