Added new recipe in the hatch recipe page i used the <ol> elment insted of steps i added <br> elemnt to the igeridant sction to make it berrter

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
              <li><h2><a href="./recipes/chili-relleno-casserole.html">Chili Relleno Casserole</a></h2></li>
              <li><h2><a href="./recipes/burger.html">Triple Seared Whiskey Burger</a></h2></li>
+             <li><h2><a href="./recipes/hatch-chile-enchilada-pie.html">Hatch Chile Enchilada Pie</a></h2></li>
         </ul>
     </body>
 </html>
